clusters/home/flux-system/hello-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
spec:
  rules:
    - host:
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name:  hello-server
                port:
                  number: 80
