clusters/home/flux-system/podinfo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: default
spec:
  rules:
    - host: 
      http:
        paths:
          - path: /bar
            pathType: Exact
            backend:
              service:
                name:  podinfo
                port: 9898
