clusters/home/flux-system/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: whoami.local
      http:
        paths:
          - path: /whoami
            pathType: Exact
            backend:
              service:
                name:  whoami
                port: 
                  number: 80
